--- a/portfolio.css
+++ b/portfolio.css
@@ -18,16 +18,89 @@ body{
     border: 2px solid black;
     border-radius: 20px;
 }
-.innerhtml ,.innercss,.innerjs,.innerreact,.innernext,.innernode,.innersql,.innerc,.innerpython{
+.innerhtml {
    height: 40px;
-    width: 160px; 
+    width: 150px; 
      background-color: rgb(125, 109, 125);
       border-radius: 20px;
       text-align: center;
       display: flex;
     align-items: center;
-    justify-content: center;
-      
+    justify-content: center; 
+}
+.innercss{
+   height: 40px;
+    width: 150px; 
+     background-color: rgb(125, 109, 125);
+      border-radius: 20px;
+      text-align: center;
+      display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+.innerjs{ height: 40px;
+    width: 140px; 
+     background-color: rgb(125, 109, 125);
+      border-radius: 20px;
+      text-align: center;
+      display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+.innerreact{ height: 40px;
+    width: 130px; 
+     background-color: rgb(125, 109, 125);
+      border-radius: 20px;
+      text-align: center;
+      display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+.innernext{ height: 40px;
+    width: 90px; 
+     background-color: rgb(125, 109, 125);
+      border-radius: 20px;
+      text-align: center;
+      display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+.innernode{ height: 40px;
+    width: 100px; 
+     background-color: rgb(125, 109, 125);
+      border-radius: 20px;
+      text-align: center;
+      display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+.innersql{ height: 40px;
+    width: 150px; 
+     background-color: rgb(125, 109, 125);
+      border-radius: 20px;
+      text-align: center;
+      display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+.innerc{ height: 40px;
+    width: 140px; 
+     background-color: rgb(125, 109, 125);
+      border-radius: 20px;
+      text-align: center;
+      display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+.innerpython{
+   height: 40px;
+    width: 120px; 
+     background-color: rgb(125, 109, 125);
+      border-radius: 20px;
+      text-align: center;
+      display: flex;
+    align-items: center;
+    justify-content: center; 
 }
 .row{
   display: flex;
@@ -159,51 +232,45 @@ margin-top: 30px;
   transform: translateY(-5px);
   cursor: pointer;
 }
-/* @media (max-width: 768px) {
-  .homees {
-    flex-direction: column;
-    gap: 30px;
-    margin-left: 0;
-  }
+.education {
+  padding: 40px;
+  background: #f7f7f7;
+  border-radius: 15px;
+}
 
-  .name {
-    margin-left: 0;
-    text-align: center;
-  }
+.education h2 {
+  font-size: 32px;
+  margin-bottom: 20px;
+  color: #f5f7f8;
+}
 
-  .imageee {
-    margin-left: 0;
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-  }
+.edu-item {
+  border-left: 8px solid #f4f8fa;
+  padding-left: 20px;
+  margin-bottom: 25px;
+  position: relative;
+}
 
-  #tourque_talks, #calcify, #tictactoe {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    flex-direction: column;
-    align-items: center;
-  }
+.edu-item h3 {
+  margin: 0;
+  color: #eaeef1;
+  font-size: 20px;
+}
 
-  .img_div {
-    width: 80%;
-    height: auto;
-  }
+.college {
+  color: #666c6c;
+  font-size: 16px;
+}
 
-  .text_div {
-    margin-left: 0;
-    margin-top: 15px;
-    text-align: center;
-  }
+.year {
+  font-size: 14px;
+  color: #2980b9;
+  font-weight: bold;
+}
 
-  .navigations {
-    justify-content: center;
-    margin-left: 0;
-  }
-
-  .navigations li a {
-    width: auto;
-    padding: 10px 15px;
-  }
-} */
+.details {
+  font-size:medium;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: #555;
+  margin-top: 5px;
+}
